--- a/set3.tex
+++ b/set3.tex
@@ -52,7 +52,18 @@
       subspace of size $2^d$, we have $2^n \leq 2^d$. So
       $log_2(n) \leq log_s(d)$ and by the conclusion of the previous
       problem, $\log_2(n) \leq D(f)$.
-    \item TODO
+    \item First consider $M_f$ as a matrix over $\mathbb{F}_2$. If the
+      rank is $r$, we can write any row in the matrix as a linear
+      combination of $r$ basis vectors. Since the constant on each
+      basis vector can only be 0 or 1, we can communicate our
+      entire row by sending $r$ bits, and then the other player
+      knows our row, so they can send a bit for the answer. Thus
+      \begin{equation}
+        D(f) \leq rank(M_f) + 1
+      \end{equation}
+      This rank is over $\mathbb{F}_2$, but the rank over the reals
+      cannot be smaller than the rank over any other field, so the
+      equation holds for rank over the reals as well.
     \item TODO
   \end{enumerate}
 \end{problem}
