--- a/set3.tex
+++ b/set3.tex
@@ -64,7 +64,7 @@
       This rank is over $\mathbb{F}_2$, but the rank over the reals
       cannot be smaller than the rank over any other field, so the
       equation holds for rank over the reals as well.
-    \item TODO
+    \item I'm stumped on this one.
   \end{enumerate}
 \end{problem}
 
